{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 688,
  "lineage": "a7e58351-2b66-7748-afd8-fc04acef61a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "final-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:401231370622:loadbalancer/final-elb",
            "availability_zones": [
              "us-west-2a",
              "us-west-2b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "final-elb-857023601.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 120,
                "target": "HTTP:80/check/",
                "timeout": 15,
                "unhealthy_threshold": 10
              }
            ],
            "id": "final-elb",
            "idle_timeout": 60,
            "instances": [
              "i-009e8261df06069b7",
              "i-01061b5a951034179",
              "i-01548e1c2024539c6"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "final-elb",
            "security_groups": [
              "sg-00078cb8a6f453aea"
            ],
            "source_security_group": "401231370622/final-sg",
            "source_security_group_id": "sg-00078cb8a6f453aea",
            "subnets": [
              "subnet-00e433ad22b947a7c",
              "subnet-01bc6a9657ab4354a"
            ],
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.final-sg",
            "aws_subnet.final-subnet-1",
            "aws_subnet.final-subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "final-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:401231370622:internet-gateway/igw-0505f82efc85d364d",
            "id": "igw-0505f82efc85d364d",
            "owner_id": "401231370622",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c5b2a350028a0923"
          },
          "dependencies": [
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "final-mrta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f34c83eeddb4dd09",
            "original_route_table_id": "rtb-0c76dfadc8c8fc350",
            "route_table_id": "rtb-0d46fdf142af4c840",
            "vpc_id": "vpc-0c5b2a350028a0923"
          },
          "dependencies": [
            "aws_internet_gateway.final-gw",
            "aws_route_table.final-rt",
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "final-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d46fdf142af4c840",
            "owner_id": "401231370622",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0505f82efc85d364d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0c5b2a350028a0923"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.final-gw",
            "aws_vpc.final-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "final-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:401231370622:security-group/sg-00078cb8a6f453aea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00078cb8a6f453aea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "final-sg",
            "name_prefix": "",
            "owner_id": "401231370622",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5b2a350028a0923"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:401231370622:subnet/subnet-01bc6a9657ab4354a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01bc6a9657ab4354a",
            "map_public_ip_on_launch": false,
            "owner_id": "401231370622",
            "tags": {
              "Name": "Final-Subnet-1"
            },
            "vpc_id": "vpc-0c5b2a350028a0923"
          },
          "dependencies": [
            "aws_vpc.final-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:401231370622:subnet/subnet-00e433ad22b947a7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-00e433ad22b947a7c",
            "map_public_ip_on_launch": false,
            "owner_id": "401231370622",
            "tags": {
              "Name": "Final-Subnet-2"
            },
            "vpc_id": "vpc-0c5b2a350028a0923"
          },
          "dependencies": [
            "aws_vpc.final-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "final-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:401231370622:subnet/subnet-01d32b0c27534bb9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01d32b0c27534bb9f",
            "map_public_ip_on_launch": false,
            "owner_id": "401231370622",
            "tags": {
              "Name": "Final-Subnet-3"
            },
            "vpc_id": "vpc-0c5b2a350028a0923"
          },
          "dependencies": [
            "aws_vpc.final-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "final-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:401231370622:vpc/vpc-0c5b2a350028a0923",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-078fc961367071943",
            "default_route_table_id": "rtb-0d46fdf142af4c840",
            "default_security_group_id": "sg-0276514775587580e",
            "dhcp_options_id": "dopt-31612149",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c5b2a350028a0923",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d46fdf142af4c840",
            "owner_id": "401231370622",
            "tags": {
              "Name": "Final-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}